--- a/package.json
+++ b/package.json
@@ -14,15 +14,7 @@
   "devDependencies": {
     "electron": "^1.8.6",
     "electron-packager": "^8.4.0",
-    "electron-reload": "^1.2.2",
-    "eslint": "^4.18.2",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "gulp": "^3.9.1",
-    "gulp-eslint": "^4.0.2",
-    "gulp-if": "^2.0.2"
+    "electron-reload": "^1.2.2"
   },
   "dependencies": {
     "headless-work-timer": "0.0.3",
